# Task-manager

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: main.py
src/core/: config.py
src/db/: dependencies.py  session.py
src/migrations/: env.py
src/migrations/versions/: d347efffe4a3_test_sync.py  e94864658496_initial.py
src/modules/auth/: dependencies.py  pages.py  router.py  schemas.py  service.py
src/modules/tasks/: dependencies.py  models.py  pages.py  repository.py  router.py  schemas.py  service.py
src/modules/users/: models.py  repository.py  router.py  schemas.py  service.py
src/static/css/: style.css
src/templates/: base.html  login.html  register.html  task_edit.html  task_form.html  tasks.html
